k8s/manifests/curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
      - name: curl
        image: curlimages/curl
        command: ["sh", "-c", "sleep 20d"]
