k8s/manifests/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      nodeSelector:
        kubernetes.io/os: windows
        beta.kubernetes.io/os: windows
      containers:
      - name: sqlserver
        image: 273653477426.dkr.ecr.eu-central-1.amazonaws.com/sitecore-xm-sqldev:9.3.0-windowsservercore-ltsc2019
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  selector:
    app: sqlserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
