k8s/manifests/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
  labels:
    app: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  template:
    metadata:
      labels:
        app: solr
    spec:
      nodeSelector:
        beta.kubernetes.io/os: windows
      containers:
      - name: solr
        image: 273653477426.dkr.ecr.eu-central-1.amazonaws.com/sitecore-xm-solr:9.3.0-nanoserver-1809
---
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  selector:
    app: solr
  ports:
  - protocol: TCP
    port: 8983
    targetPort: 8983
  type: ClusterIP
