k8s/manifests/cd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd
  labels:
    app: cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cd
  template:
    metadata:
      labels:
        app: cd
    spec:
      nodeSelector:
        beta.kubernetes.io/os: windows
      containers:
      - name: cd
        image: 273653477426.dkr.ecr.eu-central-1.amazonaws.com/odin-sitecore-xm1-cd:9.3.0-d8bd5939
---
apiVersion: v1
kind: Service
metadata:
  name: cd
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  selector:
    app: cd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: null
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cd-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  rules:
  - host: asore-cd.aws.nuuday.nu
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
