k8s/manifests/cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm
  labels:
    app: cm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm
  template:
    metadata:
      labels:
        app: cm
    spec:
      nodeSelector:
        beta.kubernetes.io/os: windows
      containers:
      - name: cm
        image: 273653477426.dkr.ecr.eu-central-1.amazonaws.com/odin-sitecore-xm1-cm:9.3.0-d8bd5939
---
apiVersion: v1
kind: Service
metadata:
  name: cm
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  selector:
    app: cm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cm-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  rules:
  - host: asore-cm.aws.nuuday.nu
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
