k8s/manifests/iis-with-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis
  labels:
    app: iis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iis
  template:
    metadata:
      labels:
        app: iis
    spec:
      nodeSelector:
        beta.kubernetes.io/os: windows
      containers:
      - name: iis-server
        image: mcr.microsoft.com/windows/servercore/iis:windowsservercore-ltsc2019
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shell
  labels:
    app: shell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shell
  template:
    metadata:
      labels:
        app: shell
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: shell
        image: alpine
        command:
        - sleep
        - '800000'
---
apiVersion: v1
kind: Service
metadata:
  name: iis
spec:
  selector:
    app: iis
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: null
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iis-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: iis
          servicePort: 80
