k8s/manifests/sis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sis
  labels:
    app: sis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sis
  template:
    metadata:
      labels:
        app: sis
    spec:
      nodeSelector:
        beta.kubernetes.io/os: windows
      containers:
      - name: sis
        image: 273653477426.dkr.ecr.eu-central-1.amazonaws.com/odin-sitecore-xm-identity:9.3.0-nanoserver-1809-a0fb157e
---
apiVersion: v1
kind: Service
metadata:
  name: sis
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  selector:
    app: sis
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: null
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sis-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    service.kubernetes.io/local-svc-only-bind-node-with-pod: "true"
spec:
  rules:
  - host: asore-sis.aws.nuuday.nu
    http:
      paths:
      - path: /
        backend:
          serviceName: sis
          servicePort: 80
